--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -31,6 +31,8 @@
   }
 
   $modal-height-width-ratio: 0.5;
+  // We need to be able to show at least title and buttons
+  $min-bottom-side-panel-height: calc(modal-variables.$clr-modal-sm-width * 0.6);
 
   .clr-side-panel-pinned-bottom-sm {
     padding-bottom: calc(modal-variables.$clr-modal-sm-width * $modal-height-width-ratio) !important;
@@ -129,7 +131,7 @@
         width: 100%;
         justify-content: end;
         max-height: 100%;
-        min-height: calc(modal-variables.$clr-modal-sm-width * 0.6);
+        min-height: $min-bottom-side-panel-height;
 
         height: calc(modal-variables.$clr-modal-md-width * $modal-height-width-ratio);
 
