--- a/projects/angular/src/emphasis/_labels.clarity.scss
+++ b/projects/angular/src/emphasis/_labels.clarity.scss
@@ -50,10 +50,10 @@
     justify-content: center;
     align-items: center;
     gap: tokens.$cds-global-space-5;
-    padding: tokens.$cds-global-space-3 tokens.$cds-global-space-5;
+    padding: 0 var(--clr-base-layout-space-2xs);
     border: label-variables.$clr-label-borderwidth solid label-variables.$clr-label-default-border-color;
-    border-radius: tokens.$cds-alias-object-border-radius-200;
-    height: tokens.$cds-global-space-9;
+    border-radius: var(--clr-base-border-radius-l);
+    height: var(--clr-base-row-height-s);
     margin: 0 tokens.$cds-global-space-4 tokens.$cds-global-space-1 0;
     white-space: nowrap;
     color: label-variables.$clr-label-font-color-light;
@@ -68,6 +68,10 @@
     cds-icon {
       margin: 0;
       text-decoration: none;
+    }
+
+    cds-icon {
+      @include mixins.min-equilateral(var(--clr-base-icon-size-s));
     }
 
     &:has(.badge) {
