fix(accordion): rounded top borders on nested accordions (#1792)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2633

## What is the new behavior?
Adjust new corner cases for rounded corners

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -233,18 +233,36 @@
       box-shadow: none;
     }
 
-    .clr-accordion-panel:first-child
-      > div[class*='clr-accordion-panel-']
-      > .clr-accordion-header:not(.clr-stepper-header) {
-      border-top-left-radius: accordion-variables.$clr-accordion-border-radius;
-      border-top-right-radius: accordion-variables.$clr-accordion-border-radius;
-    }
+    //Add borders to panel
+    .clr-accordion-panel .clr-accordion-header:not(.clr-stepper-header) {
+      border-radius: accordion-variables.$clr-accordion-border-radius;
 
-    .clr-accordion-panel:last-child .clr-accordion-header:not(.clr-stepper-header) {
-      &,
+      // add borders to content
       & + .clr-accordion-content-region > .clr-accordion-content {
         border-bottom-left-radius: accordion-variables.$clr-accordion-border-radius;
         border-bottom-right-radius: accordion-variables.$clr-accordion-border-radius;
+      }
+    }
+
+    // Remove borders from Middle panel
+    .clr-accordion-panel
+      + .clr-accordion-panel
+      > div[class*='clr-accordion-panel-']
+      > .clr-accordion-header:not(.clr-stepper-header) {
+      border-top-left-radius: unset;
+      border-top-right-radius: unset;
+    }
+
+    // if not last panel - note: last-child not quite working on classes
+    .clr-accordion-panel:not(:last-child)
+      > div[class*='clr-accordion-panel-']
+      > .clr-accordion-header:not(.clr-stepper-header) {
+      &,
+      & + .clr-accordion-content-region > .clr-accordion-content {
+        // if not last content element
+        border-bottom: none;
+        border-bottom-left-radius: unset;
+        border-bottom-right-radius: unset;
       }
     }
 
