fix: revert expandable caret change

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -922,7 +922,7 @@
       }
 
       .datagrid-expandable-caret-icon {
-        margin: mixins.baselinePx(-3) 0 0;
+        margin: 0;
       }
 
       &.datagrid-cell {
