--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -19,7 +19,7 @@
   background: alert-variables.getAlertColor($alertType, bg-color);
   color: alert-variables.getAlertColor($alertType, color);
 
-  & .alert-items .alert-item a {
+  & .alert-items .alert-item a:not(.badge) {
     color: alert-variables.getAlertColor($alertType, color);
 
     cds-icon,
