fix(datagrid): strict sizing for action toggle button

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -620,6 +620,7 @@
 
       .datagrid-action-toggle {
         @include mixins.clr-no-styles-button();
+        @include mixins.equilateral(tokens.$cds-global-space-7);
 
         cds-icon,
         clr-icon {
