fix(datagrid): virtual scroller work with filtering, sorting and selection (#1794)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?
Datagrid's data driven virtual scroller doesn't work properly when
sorting or filtering is available.

Issue Number: CDE-2675

## What is the new behavior?
Datagrid's data driven virtual scroller work properly when sorting or
filtering is available.

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>
Co-authored-by: Daniel Tsanev <127101685+dtsanevmw@users.noreply.github.com>

--- a/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
@@ -39,6 +39,7 @@
   #dynamicRowsDatagrid
   [(clrDgSelected)]="selectedRows"
   *ngIf="{ rows: rows | async }; let data"
+  [clrDgItemsTrackBy]="trackItemById"
   style="height: 32rem"
   class="datagrid-compact"
 >
@@ -128,6 +129,7 @@
   #usersDatagrid
   *ngIf="{ users: users | async }; let data"
   [(clrDgSelected)]="selectedUsers"
+  [clrDgItemsTrackBy]="trackItemById"
   class="datagrid-compact"
   style="height: 30rem"
 >
