--- a/projects/demo/src/app/datagrid/virtual-scroll-empty-rows/virtual-scroll-empty-rows.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-empty-rows/virtual-scroll-empty-rows.html
@@ -25,14 +25,15 @@
   #datagrid
   [(clrDgSelected)]="selectedUsers"
   (clrDgRefresh)="refresh($event)"
+  [clrDgItemsTrackBy]="trackItemById"
   class="datagrid-compact"
   style="height: 480px"
 >
-  <clr-dg-column>User ID</clr-dg-column>
-  <clr-dg-column>Name</clr-dg-column>
-  <clr-dg-column>Creation date</clr-dg-column>
-  <clr-dg-column>Pokemon</clr-dg-column>
-  <clr-dg-column>Favorite color</clr-dg-column>
+  <clr-dg-column [clrDgField]="'id'">User ID</clr-dg-column>
+  <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
+  <clr-dg-column [clrDgField]="'creation'">Creation date</clr-dg-column>
+  <clr-dg-column [clrDgField]="'pokemon'">Pokemon</clr-dg-column>
+  <clr-dg-column [clrDgField]="'color'">Favorite color</clr-dg-column>
 
   <ng-template
     clrVirtualScroll
@@ -69,14 +70,16 @@
   </clr-dg-detail>
 
   <clr-dg-footer>
-    <div class="footer-counters">Rows {{userRange?.start + 1}} - {{userRange?.end}} of {{totalRows}}</div>
+    <div class="footer-counters">Rows {{userRange?.start + 1}} - {{userRange?.end}} of {{dataRange.total}}</div>
     <clr-dropdown>
       <button class="btn btn-sm btn-outline-neutral" clrDropdownTrigger aria-label="Dropdown demo button">
         Snap Jump to
         <cds-icon shape="angle" direction="down"></cds-icon>
       </button>
       <clr-dropdown-menu *clrIfOpen [clrPosition]="'top-right'">
-        <div *ngFor="let index of getIndexes(totalRows)" (click)="jumpTo(index)" clrDropdownItem>{{index + 1}}</div>
+        <div *ngFor="let index of getIndexes(dataRange.total)" (click)="jumpTo(index)" clrDropdownItem>
+          {{index + 1}}
+        </div>
       </clr-dropdown-menu>
     </clr-dropdown>
   </clr-dg-footer>
