fix(datagrid): revert major changes and inject datagrid instead

--- a/projects/demo/src/app/datagrid/virtual-scroll-server-side/virtual-scroll-server-side.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-server-side/virtual-scroll-server-side.html
@@ -42,6 +42,7 @@
   </clr-dg-column>
 
   <ng-template
+    *ngIf="data.users"
     clrVirtualScroll
     let-user
     [clrVirtualRowsOf]="data.users"
