--- a/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
@@ -48,6 +48,7 @@
   </clr-dg-column>
 
   <ng-template
+    *ngIf="data.rows"
     clrVirtualScroll
     let-row
     [clrVirtualRowsOf]="data.rows"
@@ -139,6 +140,7 @@
   <clr-dg-column [clrDgField]="'color'">Favorite color</clr-dg-column>
 
   <ng-template
+    *ngIf="data.users"
     clrVirtualScroll
     let-user
     [clrVirtualRowsOf]="data.users"
