add missing event binding (merge conflict mistake)

--- a/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
@@ -41,6 +41,7 @@
   *ngIf="{ rows: rows | async }; let data"
   [clrDgItemsTrackBy]="trackItemById"
   [clrDgCustomSelectAllEnabled]="true"
+  (clrDgCustomSelectAll)="toggleSelectAllRows($event)"
   style="height: 32rem"
   class="datagrid-compact"
 >
