feat(datagrid): add ability to use custom select all logic (#1724)
Applications can provide custom select all logic. This can allow
applications to select items that are aren't loaded yet or control how
select all works across multiple pages of items.

CDE-2588

--- a/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
+++ b/projects/demo/src/app/datagrid/virtual-scroll-client-side/virtual-scroll-client-side.html
@@ -40,6 +40,8 @@
   [(clrDgSelected)]="selectedRows"
   *ngIf="{ rows: rows | async }; let data"
   [clrDgItemsTrackBy]="trackItemById"
+  [clrDgCustomSelectAllEnabled]="true"
+  (clrDgCustomSelectAll)="toggleSelectAllRows($event)"
   style="height: 32rem"
   class="datagrid-compact"
 >
