--- a/projects/demo/src/app/dropdown/dropdown-angular-nested.demo.html
+++ b/projects/demo/src/app/dropdown/dropdown-angular-nested.demo.html
@@ -73,4 +73,34 @@
       <div clrDropdownItem>Link 2</div>
     </clr-dropdown-menu>
   </clr-dropdown>
+
+  <div class="content-area" style="position: relative">
+    <div style="margin-top: 400px"></div>
+    <clr-dropdown>
+      <button class="btn btn-outline-primary" clrDropdownTrigger>
+        Relative position Dropdown
+        <cds-icon shape="angle" direction="down"></cds-icon>
+      </button>
+      <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
+        <label class="dropdown-header" aria-hidden="true">Dropdown header</label>
+        <div aria-label="Dropdown header Action 1" clrDropdownItem>Action 1</div>
+        <div aria-label="Dropdown header Disabled Action" [clrDisabled]="true" clrDropdownItem>Disabled Action</div>
+        <div class="dropdown-divider" role="separator" aria-hidden="true"></div>
+        <clr-dropdown>
+          <button clrDropdownTrigger>Link 1</button>
+          <clr-dropdown-menu>
+            <button clrDropdownItem>Foo</button>
+            <clr-dropdown>
+              <button clrDropdownTrigger>Bar</button>
+              <clr-dropdown-menu clrPosition="left-top">
+                <button clrDropdownItem>Baz</button>
+              </clr-dropdown-menu>
+            </clr-dropdown>
+          </clr-dropdown-menu>
+        </clr-dropdown>
+        <div clrDropdownItem>Link 2</div>
+      </clr-dropdown-menu>
+    </clr-dropdown>
+    <div style="margin-top: 800px"></div>
+  </div>
 </div>
