fix(breadcrumb): adjust link color tokens

--- a/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
+++ b/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
@@ -26,6 +26,10 @@
         text-decoration: none;
         text-align: center;
         line-height: tokens.$cds-global-space-9;
+
+        &:visited {
+          color: breadcrumb-variables.$clr-breadcrumb-visited-color;
+        }
       }
 
       &:not(:last-child):after {
