--- a/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
+++ b/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
@@ -27,6 +27,9 @@
         text-align: center;
         line-height: tokens.$cds-global-space-9;
 
+        &:hover {
+          color: breadcrumb-variables.$clr-breadcrumb-hover-color;
+        }
         &:visited {
           color: breadcrumb-variables.$clr-breadcrumb-visited-color;
         }
