--- a/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
+++ b/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
@@ -8,6 +8,7 @@
 @use 'sass:meta';
 @use '../../utils/mixins';
 @use 'variables.breadcrumbs' as breadcrumb-variables;
+@use '../nav/variables.nav' as nav-variables;
 @use '@cds/core/tokens/tokens.scss';
 @include meta.load-css('properties.breadcrumbs');
 
@@ -27,18 +28,18 @@
         text-align: center;
         line-height: tokens.$cds-global-space-9;
 
-        &:hover {
-          color: breadcrumb-variables.$clr-breadcrumb-hover-color;
-        }
         &:visited {
-          color: breadcrumb-variables.$clr-breadcrumb-visited-color;
+          color: nav-variables.$clr-link-color;
+        }
+
+        &:visited:hover {
+          color: nav-variables.$clr-link-hover-color;
         }
       }
 
       &:not(:last-child):after {
         content: '/';
         margin: 0 breadcrumb-variables.$clr-breadcrumb-item-space;
-        color: breadcrumb-variables.$clr-breadcrumb-active-color;
       }
     }
 
