--- a/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
+++ b/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
@@ -30,10 +30,10 @@
 
         &:visited {
           color: nav-variables.$clr-link-color;
-        }
 
-        &:visited:hover {
-          color: nav-variables.$clr-link-hover-color;
+          &:hover {
+            color: nav-variables.$clr-link-hover-color;
+          }
         }
       }
 
