fix(breadcrumb): adjust link tokens (#1823)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [X] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2720

## What is the new behavior?
The breadcrumb hover link is expected to behave as a link; the visited
color is a regular link color.

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
+++ b/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
@@ -8,6 +8,7 @@
 @use 'sass:meta';
 @use '../../utils/mixins';
 @use 'variables.breadcrumbs' as breadcrumb-variables;
+@use '../nav/variables.nav' as nav-variables;
 @use '@cds/core/tokens/tokens.scss';
 @include meta.load-css('properties.breadcrumbs');
 
@@ -26,6 +27,14 @@
         text-decoration: none;
         text-align: center;
         line-height: tokens.$cds-global-space-9;
+
+        &:visited {
+          color: nav-variables.$clr-link-color;
+
+          &:hover {
+            color: nav-variables.$clr-link-hover-color;
+          }
+        }
       }
 
       &:not(:last-child):after {
