--- a/projects/angular/src/layout/vertical-nav/_variables.vertical-nav.scss
+++ b/projects/angular/src/layout/vertical-nav/_variables.vertical-nav.scss
@@ -49,3 +49,4 @@ $clr-vertical-nav-trigger-divider-border-width: var(--clr-vertical-nav-trigger-d
 // Vertical Nav - Header
 $clr-vertical-nav-header-font-weight: var(--clr-vertical-nav-header-font-weight) !default;
 $clr-vertical-nav-header-padding: var(--clr-vertical-nav-header-padding) !default;
+$clr-vertical-nav-header-line-height: var(--clr-vertical-nav-header-line-height) !default;
