--- a/projects/angular/src/layout/vertical-nav/_properties.vertical-nav.scss
+++ b/projects/angular/src/layout/vertical-nav/_properties.vertical-nav.scss
@@ -56,6 +56,6 @@
 
     // Vertical Nav - Header
     --clr-vertical-nav-header-font-weight: #{tokens.$cds-global-typography-font-weight-semibold};
-    --clr-vertical-nav-header-padding: #{tokens.$cds-global-space-6} #{tokens.$cds-global-space-7};
+    --clr-vertical-nav-header-padding: #{mixins.baselinePx(10)} #{tokens.$cds-global-space-7};
   }
 }
