Adjust min-height

--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -267,8 +267,7 @@
     .nav-header {
       //Dims
       padding: vertical-nav-variables.$clr-vertical-nav-header-padding;
-      height: vertical-nav-variables.$clr-vertical-nav-item-height;
-      @include mixins.overflow-ellipsis();
+      min-height: vertical-nav-variables.$clr-vertical-nav-item-height;
 
       //Others
       @include mixins.generate-typography-token(
